# AdventOfCode

./: .gitignore  README.md
2023/: CMakeLists.txt  day-template.h  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  day22.h  main.cpp
2023/Q1/: CMakeLists.txt
2023/Q1/src/: main.cpp
2023/Q10/: CMakeLists.txt
2023/Q10/src/: main.cpp
2023/Q11/: CMakeLists.txt
2023/Q11/src/: main.cpp
2023/Q2/: CMakeLists.txt
2023/Q2/src/: main.cpp
2023/Q3/: CMakeLists.txt  main.cpp
2023/Q4/: CMakeLists.txt  main.cpp
2023/Q5/src/: main.cpp
2023/Q6/: CMakeLists.txt  main.cpp
2023/Q7/src/: main.cpp
2023/Q8/: main.cpp
2023/Q9/: CMakeLists.txt  main.cpp
2024/: CMakeLists.txt  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  day11.h  day12.h  day13.h  day14.h  day15.h  day16.h  day17.h  day18.h  day19.h  day20.h  day21.h  day22.h  day23.h  day24.h  day25.h  main.cpp
2024/Q1/: CMakeLists.txt
2024/Q10/: main.cpp
2024/Q11/: CMakeLists.txt  main.cpp
2024/Q12/: CMakeLists.txt  main.cpp
2024/Q13/: CMakeLists.txt  main.cpp
2024/Q14/: CMakeLists.txt  main.cpp
2024/Q15/: CMakeLists.txt
2024/Q16/: CMakeLists.txt
2024/Q17/: CMakeLists.txt  main.cpp
2024/Q18/: CMakeLists.txt  main.cpp
2024/Q19/: CMakeLists.txt  (+1 more)
2025/: CMakeLists.txt  day-template.h  day01.h  day02.h  day03.h  day04.h  day05.h  day06.h  day07.h  day08.h  day09.h  day10.h  main.cpp
Utils/: binary_tree.h  useful.h
(+32 files in other folders)
